# ublue-updater

./: Cargo.toml  Dockerfile  README.md  meson.build
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml
.zed/: _settings.json  tasks.json
plugins/: Cargo.toml  README.md  justfile
plugins/bootc/: Cargo.toml  README.md
plugins/bootc/src/: lib.rs
plugins/brew/: Cargo.toml
plugins/brew/src/: lib.rs
plugins/distrobox/: Cargo.toml
plugins/distrobox/src/: lib.rs
plugins/flatpak/: Cargo.toml
plugins/flatpak/src/: lib.rs
plugins/rpm-ostree/: Cargo.toml
plugins/rpm-ostree/src/: lib.rs
plugins/uupd/: Cargo.toml
plugins/uupd/src/: lib.rs
src/: actions.rs  config.rs  lib.rs  main.rs  ui.rs  utils.rs  uupd.rs
src/modals/: about.rs  preferences.rs
