[package]
name = "renovatio"
version = "0.1.0"
edition = "2024"

[build-dependencies]
glib-build-tools = "0.21.0"

[dependencies]
futures = "0.3.31"
gio = { version = "0.21.2", features = ["v2_84"] }
adw = { version = "0.8.0", package = "libadwaita", features = ["v1_7"] }
gtk = { version = "0.10.1", package = "gtk4", features = ["v4_18"] }
glib = "0.21.3"
inline-xml = "0.3.2"

# relm4 = { version = "0.10.0", package = "relm4", features = ["gnome_48", "libadwaita"] }
# relm4-components = "0.10.0"
# relm4-macros = "0.10.0"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
