[package]
name = "renovatio"
version = "0.1.0"
edition = "2024"

[build-dependencies]
glib-build-tools = "0.21.0"

[dependencies]
futures = "0.3.31"
gio = { version = "0.21.2", features = ["v2_84"] }
adw = { version = "0.8.0", package = "libadwaita", features = ["v1_7"] }
gtk = { version = "0.10.1", package = "gtk4", features = ["v4_18"] }
glib = "0.21.3"
inline-xml = "0.3.2"

libloading = "0.8.9"
shellexpand = "3.1.1"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
flume = "0.11.1"
